add merged